Non-functional cleanup